--- a/UlfNewIdentity/Views/Account/Register.cshtml
+++ b/UlfNewIdentity/Views/Account/Register.cshtml
@@ -45,6 +45,14 @@
             @Html.TextBoxFor(m => m.Age, new { @class = "form-control" })
         </div>
     </div>
+    <!-- *Ulf add we have to add -->
+    <div class="form-group">
+        @Html.LabelFor(m => m.Adress, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Adress, new { @class = "form-control" })
+        </div>
+    </div>
+    <!--*Ulf add -->
 
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
